fix z-index focussing, add optional close functionality to draggables

--- a/src/components/ChatRequest/ChatRequest.module.css
+++ b/src/components/ChatRequest/ChatRequest.module.css
@@ -5,7 +5,7 @@
     top: calc(50% - 75px);
     left: calc(50% - 225px);
     width: 450px;
-    height: 150px;
+    height: 140px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     cursor: default;
